syntax = "proto3";

option csharp_namespace = "AspNetMicroservices.Shared.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ProductsService {
  rpc CreateProduct (CreateProductDTO) returns (ProductDto);

  rpc Test (google.protobuf.Empty) returns (TestResponse);
}

message CreateProductDTO {
  string name = 1;
  string description = 2;
  int32 price = 3;
}

message ProductDto {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
}

message TestResponse {
  string testMessage = 1;
}